# TribeCTF-2025-Challenges

./: .gitignore  README.md
Challenges/: README.md
Challenges/Cybench format/: README.md
Challenges/Human players: Claude Code format/: README.md
Challenges/Human players: Claude Code format/Case Manager/: challenge.docx
Challenges/Human players: Claude Code format/Ducker Hunt/: challenge.docx
Challenges/Human players: Claude Code format/GOPR/: README-local.md  connection_manager.py  docker-compose.yml
Challenges/Human players: Claude Code format/Jeff_s Screensaver/: challenge.docx
Challenges/NYU Agent format/: competition25.json  summary_db.py
Challenges/NYU Agent format/competition/2025/TribeCTF/crypto/case_request/wasm/: Cargo.toml
Cybench format/crypto/mindpq/: init_script.sh
Human players: Claude Code format/Contact Form/: Challenge.docx
Human players: Claude Code format/Coworkers/: challenge.docx
Human players: Claude Code format/GOPR/: challenge.docx
Human players: Claude Code format/Griffin_s Game/: challenge.docx
Human players: Claude Code format/Not So Top Secret Vault/: Challenge.docx  README-local.md  copy.cover
Human players: Claude Code format/Ready, Set, Go/: challenge.docx
Human players: Claude Code format/Sir Wren Sings!/: Challenge.docx
Human players: Claude Code format/case_request/: Challenge.docx
Human players: Claude Code format/dig_me_up/: README-local.md
Human players: Claude Code format/logic_level/: Challenge.docx
Human players: Claude Code format/rngcrack/: Challenge.docx
NYU Agent format/: README.md
(+371 files in other folders)
