[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20 = "0.9.1"
rand_pcg = "0.9.0"
#zlib-rs = { version = "0.5.0", default-features = false, path = "/home/storo/zlib-rs/zlib-rs" }
zlib-rs = { version = "0.5.0", default-features = false}

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
